@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 package org.openjdk.foreigntest;
 
 import java.lang.invoke.*;
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 public class PanamaMainInvoke {
    public static void main(String[] args) throws Throwable {
